--- a/Deckel-Shop/Views/Profile/Customer/Index.cshtml
+++ b/Deckel-Shop/Views/Profile/Customer/Index.cshtml
@@ -3,3 +3,22 @@
 *@
 @{
 }
+
+<h1>Customer profile</h1>
+
+<h3>Name of customer</h3>
+
+<ul class="nav nav-tabs">
+    <li class="nav-item">
+        <a class="nav-link active" href="#">Active</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Order History</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+    </li>
+</ul>
