--- a/Deckel-Shop/Views/Profile/Customer/Index.cshtml
+++ b/Deckel-Shop/Views/Profile/Customer/Index.cshtml
@@ -10,10 +10,10 @@
 
 <ul class="nav nav-tabs">
     <li class="nav-item">
-        <a class="nav-link active" href="#">Active</a>
+        <a class="nav-link active" href="index.cshtml">Profile</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Order History</a>
+        <a class="nav-link" asp-controller="Profile" asp-action="CustomerOrderHistory" >Order History</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="#">Link</a>
