--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerOrderHistory.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerOrderHistory.cshtml
@@ -3,3 +3,12 @@
 *@
 @{
 }
+
+<div class="container">
+    <div class="row">
+        <h1>Customer #001 order history</h1>
+    </div>
+    <div class="row">
+
+    </div>
+</div>
