changed icon for order history in customer list

--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
@@ -308,7 +308,7 @@
                             @*---------------------------------------------------------------------------------*@
                             @*Order history detail button*@
                             <a class="btn btn-light" style="background-color:transparent" asp-action="Admin_customerOrderHistory" asp-controller="profile">
-                                <i class="fas fa-list-ul"></i>
+                                <i class="fas fa-history"></i>
                             </a>
                         </div>
                     </td>
