--- a/Deckel-Shop/Views/Cart/Index.cshtml
+++ b/Deckel-Shop/Views/Cart/Index.cshtml
@@ -44,9 +44,7 @@
         <div class="container">
             <main>
                 <div class="py-5 text-center">
-                    <img class="d-block mx-auto mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-                    <h2>Checkout form</h2>
-                    <p class="lead">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
+                    <h2>Checkout</h2>
                 </div>
 
                 <div class="row g-5">
@@ -114,17 +112,6 @@
                                     <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
                                     <div class="invalid-feedback">
                                         Valid last name is required.
-                                    </div>
-                                </div>
-
-                                <div class="col-12">
-                                    <label for="username" class="form-label">Username</label>
-                                    <div class="input-group has-validation">
-                                        <span class="input-group-text"></span>
-                                        <input type="text" class="form-control" id="username" placeholder="Username" required>
-                                        <div class="invalid-feedback">
-                                            Your username is required.
-                                        </div>
                                     </div>
                                 </div>
 
@@ -253,15 +240,6 @@
                     </div>
                 </div>
             </main>
-
-            <footer class="my-5 pt-5 text-muted text-center text-small">
-                <p class="mb-1">&copy; 2017–2021 Company Name</p>
-                <ul class="list-inline">
-                    <li class="list-inline-item"><a href="#">Privacy</a></li>
-                    <li class="list-inline-item"><a href="#">Terms</a></li>
-                    <li class="list-inline-item"><a href="#">Support</a></li>
-                </ul>
-            </footer>
         </div>
 
 
