--- a/Deckel-Shop/Views/Profile/Customer/Index.cshtml
+++ b/Deckel-Shop/Views/Profile/Customer/Index.cshtml
@@ -1,19 +1,17 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
 
 <h1>Customer profile</h1>
 
-<h3>Name of customer</h3>
+<h3>@UserManager.GetUserAsync(User).Result.UserName</h3>
 
 <ul class="nav nav-tabs">
     <li class="nav-item">
-        <a class="nav-link active" asp-action="Index" >Profile</a>
+        <a class="nav-link active" asp-action="Index">Profile</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" asp-action="CustomerOrderHistory" >Order History</a>
+        <a class="nav-link" asp-action="CustomerOrderHistory">Order History</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="~/Identity/Account/Manage/">Manage account</a>
