--- a/Deckel-Shop/Views/Home/Index.cshtml
+++ b/Deckel-Shop/Views/Home/Index.cshtml
@@ -1,10 +1,86 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<!doctype html>
+<html lang="en">
+<head>
+    <title>Title</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<div class="text-center">
-    <h1 class="display-4">Deckel-Shop</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
-<h1>Alex glöm inte fixa frontenden</h1>
-<h2>JAG SKA GIVA DIG PÅ MOPPO!</h2>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    @section Styles {
+        <link type="text/css" rel="stylesheet" href="/css/navigationtest.css">
+    }
+    <script type="text/javascript" src="@Url.Content("/Scripts/site.js")"></script>
+</head>
+<body>
+    <header>
+        <style>
+            h1 {
+                color: #000000
+            }
+        </style>
+        <p>
+            <center>
+                <h1 class="font-weight-bold">For all your stylish needs!</h1>
+            </center>
+        </p>
+    </header>
+
+    <!-- Slideshow container -->
+    <div class="slideshow-container">
+
+        <!-- Full-width images with number and caption text -->
+        <div class="mySlides">
+            <div class="numbertext">1 / 3</div>
+            <img src="~/Image/happy propeller girl.png" style="width:100%">
+            <div class="text">Beutiful!</div>
+        </div>
+
+        <div class="mySlides">
+            <div class="numbertext">2 / 3</div>
+            <img src="~/Image/Happy propeler Man.png" style="width:100%">
+            <div class="text">Look at that happy smily</div>
+        </div>
+
+        <div class="mySlides">
+            <div class="numbertext">3 / 3</div>
+            <img src="~/Image/obamahatt.jpg" style="width:100%">
+            <div class="text">How did he get in here?</div>
+        </div>
+
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br>
+
+    <!-- The dots/circles -->
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
+    <hr />
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6">
+                <img alt="Bootstrap Image Preview" src="/Image/Surprised-propeller keps.jpg" />
+            </div>
+            <div class="col-md-6">
+                <img alt="Bootstrap Image Preview" src="~/Image/Happy propeler Man.png" />
+            </div>
+        </div>
+    </div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+</body>
+</html>
